export const snapshot = {};

snapshot[`Baseline/objects/multipart/basic metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 204,
}
`;

snapshot[`Proxy/objects/multipart/basic metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Baseline/objects/multipart/abort metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "content-length": "479",
    "content-type": "application/xml",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 404,
}
`;

snapshot[`Baseline/objects/multipart/abort body 1`] = `
'<?xml version="1.0" encoding="UTF-8"?>
<Error><Code>NoSuchUpload</Code><Message>The specified multipart upload does not exist. The upload ID may be invalid, or the upload may have been aborted or completed.</Message><Key>multipart-abort.txt</Key><BucketName>test-objects-bucket</BucketName><Resource>/test-objects-bucket/multipart-abort.txt</Resource><RequestId>ID</RequestId><HostId>HOST</HostId></Error>'
`;

snapshot[`Proxy/objects/multipart/abort metadata 1`] = `
{
  headers: {
    "content-type": "application/xml",
    vary: "Accept-Encoding",
  },
  status: 404,
}
`;

snapshot[`Proxy/objects/multipart/abort body 1`] = `'<?xml version="1.0" encoding="UTF-8"?><Error><Code>NoSuchUpload</Code><Message>The specified multipart upload does not exist. The upload ID may be invalid, or the upload may have been aborted or completed.</Message></Error>'`;

snapshot[`Baseline/objects/multipart/list-parts metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 204,
}
`;

snapshot[`Proxy/objects/multipart/list-parts metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Proxy/objects/multipart/empty metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;
